syntax = "proto3";

package holms.types.booking.reservations;
option csharp_namespace = "HOLMS.Types.Booking.Reservations";
option go_package = "booking/reservations";

import "booking/indicators/reservation_indicator.proto";
import "primitive/monetary_amount.proto";

message CashGuaranteeTenderReceived {
	.holms.types.booking.indicators.ReservationIndicator reservation = 1;
	.holms.types.primitive.MonetaryAmount amount = 2;
}
